# SumpPump

./: .env.example  .gitignore  ANALYSIS_NEWS_AND_AFTERHOURS.md  API_FIXES_SUMMARY.md  ARCHITECTURE_V2.md  CLAUDE.md  CLAUDE_CODE_CONTINUATION_PROMPT.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_TRADING_MODE.md  CONSOLIDATION_PLAN.md  EXTENDED_HOURS_TRADING_GUIDE.md  FORENSIC_ANALYSIS_REPORT.md  FORENSIC_REVIEW_REPORT.md  IBKR_LEVEL2_PERMISSIONS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  LEVEL2_COMPLETE_GUIDE.md  LEVEL2_STRATEGY_CARD.txt  MARKET_DATA_FIX.md  Makefile  PROJECT_SETUP.md  QUICKSTART.md  README.md  SAFETY_IMPLEMENTATION_SUMMARY.md  SAMPLE_TRADING_SESSION.md  TRADE_EXECUTION_FIX.md  TRADING_CHEATSHEET.txt  TRADING_SAFETY_CARD.txt  TRADING_START.txt  WINDSURF_CLAUDE_CODE_PROMPT.txt  claude_desktop_config.json  develop_modules.py  diagnose_tws.py  emergency_rollback.sh  execution_tool_proposed.py  launch_trading.sh  pyproject.toml  requirements.txt  run_mcp_server.sh  run_safety_tests.py  (+8 more)
.claude/: session-context.md  settings.json
.claude/agents/: python-code-reviewer.md
.claude/hooks/: context-builder.sh  pre-commit.sh  pre-prompt.sh  test-module.sh
docs/ai-context/: docs-overview.md  handoff.md  project-structure.md
src/: __init__.py  config.py  models.py
src/core/: __init__.py  connection_monitor.py  exceptions.py  rate_limiter.py  settings.py
src/mcp/: CONTEXT.md  __init__.py  consolidated_tools.py  migration_helper.py  new_tools.py  server.py
src/modules/: __init__.py  enhanced_session.py
src/modules/data/: CONTEXT.md  __init__.py  crypto.py  depth_of_book.py  forex.py  historical_data.py  indices.py  live_data_manager.py  options_chain.py  portfolio.py  trade_history.py
src/modules/execution/: CONTEXT.md  __init__.py  advanced_orders.py  bracket_orders.py  (+7 more)
tests/: forensic_analysis.py  test_core_infrastructure.py  test_new_tools.py  test_safety_system.py
tests/validation/: diagnose_tws.py  execute_usar_direct.py  execute_usar_trade.py  test_bull_call_spread.py  test_connection.py  test_mcp_integration.py  test_simple_account.py  test_strategy_calculation.py  validate_system.py
(+24 files in other folders)
